# galagia-if-it-was-cool

./: Cargo.toml  LICENSE  README.md
src/: app.rs  audio.rs  entities.rs  input.rs  lib.rs  main.rs  renderer.rs
src/entities/: enemy.rs  formation.rs  game_state.rs  mod.rs  particle.rs  pickup.rs  player.rs  projectile.rs
tests/: game_logic.rs
