[package]
name = "simple"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["Kyle Miller <kylemiller457@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rand = "0.9"
rodio = "0.19"
ratatui-image = "8.0"
image = "0.25"

[dev-dependencies]
proptest = "1.5"
